2005-06-04  Andreas Tobler  <a.tobler@schweiz.ch>

	* jawt.c: Remove malloc.h include and use stdlib.h instead.

2005-06-01  Tom Tromey  <tromey@redhat.com>

	PR libgcj/21753:
	* java/lang/natString.cc (substring): Changed sharing heuristic.

2005-05-29  Michael Koch  <konqueror@gmx.de>

	PR libgcj/20273:
	* java/util/LinkedHashMap.java (access): Set 'root.pred'.

2005-05-27  Robin Green  <greenrd@greenrd.org>

	PR libgcj/21775:
	* java/util/logging/natLogger.cc (getCallerStackFrame): Start
	with i=1.

2005-05-26  Bryce McKinlay  <mckinlay@redhat.com>

	* include/jvm.h (FLAG_BINARYCOMPAT_ABI): New.
	(GCJ_BINARYCOMPAT_ADDITION): Removed.
	(OLD_GCJ_40_BC_ABI_VERSION): Renamed. Old-style version ID for BC-ABI
	classes.
	(GCJ_40_BC_ABI_VERSION): New. Calculate version	ID using new method.
	(_Jv_CheckABIVersion): Check for both old and new style version IDs.

2005-05-14  Chris Burdess  <dog@gnu.org>

	* gnu/xml/dom/ls/SAXEventSink.java: Ignore XML entities in start/
	end entity callbacks.

2005-05-24  Gary Benson  <gbenson@redhat.com>

	PR libgcj/21736:
	* java/text/MessageFormat.java (MessageFormatElement.setLocale):
	Handle DateFormat.DEFAULT case correctly.

2005-05-21  Tom Tromey  <tromey@redhat.com>

	PR libgcj/21703:
	* java/lang/ref/natReference.cc (find_slot): Handle case where
	table has no NULL entries.
	* java/lang/natString.cc (_Jv_StringFindSlot): Handle case where
	table has no NULL entries.

2005-05-20  Tom Tromey  <tromey@redhat.com>

	PR libgcj/21637:
	* gnu/java/net/protocol/jar/Connection.java (getInputStream):
	Throw FileNotFoundException if jar entry not found.

2005-05-18  Thomas Fitzsimmons  <fitzsim@redhat.com>

	PR libgcj/19729
	* gnu/java/security/provider/DSASignature.java: Import updates
	from GNU Crypto.

2005-05-18  Anthony Green  <green@redhat.com>

	* jni/gtk-peer/gtk_jawt.c (classpath_jawt_object_lock,
	classpath_jawt_object_unlock, classpath_jawt_create_lock,
	classpath_jawt_destroy_lock): New functions.